# noyce_assignment

./: README.md
noyce-backend/: alembic.ini  main.py  pyproject.toml
noyce-backend/alembic/: env.py
noyce-backend/alembic/versions/: bb95b0b5a8ad_add_requests_table.py
noyce-backend/api/: analytics.py  jobs.py  request.py
noyce-backend/api/utils/: job.py  request.py
noyce-backend/db/: db_setup.py
noyce-backend/db/models/: job.py  mixins.py  request.py
noyce-backend/pydantic_schemas/: job.py  request.py
noyce-frontend/: package-lock.json  package.json
noyce-frontend/src/: App.js  theme.js
noyce-frontend/src/components/: BarChart.jsx  LineChart.jsx  PieChart.jsx  StatBox.jsx  requestChart.jsx
noyce-frontend/src/data/: api.js
noyce-frontend/src/scenes/dashboard/: index.jsx
noyce-frontend/src/scenes/global/: Sidebar.jsx  Topbar.jsx
noyce-frontend/src/scenes/job/: index.jsx
noyce-frontend/src/scenes/jobs/: index.jsx
noyce-frontend/src/scenes/requests/: index.jsx
noyce-frontend/src/scenes/team/: index.jsx
